Fix logo ratio and text align

--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -16,18 +16,35 @@
   display: flex;
   flex-direction: row;
   max-width: 40%;
-  align-items: center;
 }
 
 .footer-logo {
-  width: 150px;
-  height: 150px;
+  max-width: 150px;
+  max-height: 150px;
+  width: auto;
+  height: auto;
+  object-fit: contain;
   margin-right: 25px;
+  align-self: center;
 }
 
 .footer-contact {
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  box-sizing: border-box;
+  padding: 18px 0;
+}
+
+.footer-contact p {
+  margin: 0;
+  line-height: 1.6em;
+  margin-bottom: 5px;
+}
+
+.footer-contact p:last-child {
+  margin-bottom: 0; 
 }
 
 .footer-right {
@@ -83,12 +100,12 @@
   .footer {
     flex-direction: row;
     align-items: flex-start;
-    justify-content: space-between;
+    justify-content: space-evenly;
     text-align: left;
-    padding: 20px;
-    box-sizing: border-box;
   }
-
+  .footer-contact {
+    padding: 30px;
+  }
   .footer-left {
     max-width: 100%;
     justify-content: center;
